FixeD: icon alignment issue

--- a/src/blocks/timeline/style.scss
+++ b/src/blocks/timeline/style.scss
@@ -22,6 +22,11 @@
     text-decoration: none;
     color:inherit;
 }
+.uagb-timeline-heading a {
+    font-size: inherit;
+    color: inherit;
+    margin-bottom: inherit;
+}
 .uagb-timeline-main{
   position: relative;
 }
@@ -61,6 +66,7 @@
   line-height: 1em;
   display: inline-block;
   vertical-align: middle;
+  font-style: normal;
 }
 .uagb-timeline-shadow-yes .uagb-events-inner-new {
   -webkit-filter: drop-shadow(0px 1px 4px rgba(0, 0, 0, 0.5));
